// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconIndicator component snapshot matches when all parameters given 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 100,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {
        "height": 24,
        "width": 24,
      },
      Object {
        "backgroundColor": "#8829CC",
      },
    ]
  }
  testID="testID"
>
  <svg
    data-file-name="SvgMicrophone"
    fill="#8829CC"
    height={16}
    width={16}
  />
</View>
`;

exports[`IconIndicator component snapshot matches when optional parameters not given 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 100,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      false,
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.36)",
      },
    ]
  }
  testID="testID"
>
  <svg
    data-file-name="SvgMicrophone"
    fill="#FFFFFF"
    height={18}
    width={18}
  />
</View>
`;
